--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/CryptoDemo.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/CryptoDemo.razor
@@ -1,5 +1,6 @@
 ﻿@page "/crypto-demo"
 @inherits CryptoDemoBase
+@rendermode InteractiveAuto
 
 
 <h3 style="background-color:#2b6cb0; color:white; padding:10px;">AES 256 Encryption & Decryption</h3>
