changed rendermode razor page cryptodemo from interactive auto to Interactive server

--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Routes.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Routes.razor
@@ -1,4 +1,10 @@
-﻿<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
+﻿@using BlazorAppSecurityExamen.Components.Pages
+
+<Router AppAssembly="typeof(Program).Assembly"
+        AdditionalAssemblies="new[] {
+            typeof(Client._Imports).Assembly,
+            typeof(CryptoDemo).Assembly
+        }">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
             <NotAuthorized>
