--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Layout/NavMenu.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Layout/NavMenu.razor
@@ -42,6 +42,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rsatest">
+                <span class="bi bi-shield-lock-nav-menu" aria-hidden="true"></span> RSA Demo
+            </NavLink>
+        </div>
+
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
