clean up and adding of text inside crypto demo boxes, added auth for admin to rsa test

--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/CryptoDemo.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/CryptoDemo.razor
@@ -8,13 +8,14 @@
 
 <div class="mb-3">
     <label>AESKey</label>
-    <InputText class="form-control" @bind-Value="AESKey" readonly />
+    <InputText class="form-control" @bind-Value="AESKey" readonly placeholder="Please press the Generate Key button down below " />
 </div>
 
 <div class="mb-3">
     <label>PlainText</label>
-    <InputText class="form-control" @bind-Value="PlainText" />
+    <InputText class="form-control" @bind-Value="PlainText" placeholder="Enter your message here and don't forget to press Enter" />
 </div>
+
 
 <div class="mb-3">
     <label>AESIVKey</label>
