--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/RsaTest.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/RsaTest.razor
@@ -1,7 +1,9 @@
 ﻿@page "/rsatest"
 @inherits BlazorAppSecurityExamen.Pages.RsaTestBase
 @rendermode InteractiveServer
+@using Microsoft.AspNetCore.Authorization
 
+@attribute [Authorize(Roles = "Admin")]
 <!-- Display Public Key -->
 <div>
     <h4>Public Key:</h4>
