changed xml serializer to json serializer in infosecAsymmetric

--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Layout/NavMenu.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Layout/NavMenu.razor
@@ -38,15 +38,17 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="crypto-demo">
-                <span class="bi bi-shield-lock-nav-menu" aria-hidden="true"></span> Crypto Demo
+                🗝️ Crypto Demo
             </NavLink>
         </div>
 
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rsatest">
-                <span class="bi bi-shield-lock-nav-menu" aria-hidden="true"></span> RSA Demo
+                🔑 RSA Demo
             </NavLink>
         </div>
+
 
         <AuthorizeView>
             <Authorized>
