--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/wwwroot/app.css
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/wwwroot/app.css
@@ -49,3 +49,14 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
 }
+.publickeybox {
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 6px;
+    background-color: #f9f9f9;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: inherit;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
