split up the modulus and the exponent method changed some according html

--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/RsaTest.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Pages/RsaTest.razor
@@ -8,7 +8,11 @@
 <div> 
     <h3>Public Key:</h3>
     <div class="publickeybox"> 
-        @publicKey
+        <p><strong>Encrypted:</strong>@publicKeyModulus</p>
+    </div>
+
+    <div class="publickeybox"> 
+        <p><strong>Encrypted:</strong>@publicKeyExponent</p>
     </div>
 </div>
 
