added images to acces denied, auth and an authorize view to rsa encryption

--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen.Client/Pages/Auth.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen.Client/Pages/Auth.razor
@@ -12,3 +12,4 @@
 <AuthorizeView>
     Hello @context.User.Identity?.Name!
 </AuthorizeView>
+<img src="images/sacred_tome.jpg" style="display: block; margin: 0 auto; max-width: 100%; height: auto; max-height: 60vh;" />
