--- a/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Account/Pages/AccessDenied.razor
+++ b/BlazorAppSecurityExamen/BlazorAppSecurityExamen/Components/Account/Pages/AccessDenied.razor
@@ -6,3 +6,6 @@
     <h1 class="text-danger">Access denied</h1>
     <p class="text-danger">You do not have access to this resource.</p>
 </header>
+<img src="images/acces_denied_buddy.jpg" style="display: block; margin: 0 auto; max-width: 100%; height: auto; max-height: 60vh;" />
+
+
